--- a/styles.css
+++ b/styles.css
@@ -16,63 +16,60 @@ body{
     background-color: var(--main-color);
     height: 100vh;
     width: 100vw;
+    font-family: var(--main-font);
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 .flex-container{
     display: flex;
-    margin-top: 30px;
+    flex-direction: column;
+    width: 350px;
+    height: 550px;
+    background-color:var(--fourth-color);
+    border-radius: 15px;
+}
+.flex-container img{
+    border-radius: 10px;
+    margin: 20px ;
+}
+.text {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    width: 350px;
-    height: 530px;
-    background-color:var(--fourth-color);
-    border-radius: 10px;
-}
-img{
-    margin-top: 20px;
-    width:310px;
-    height: 300px;
-    border-radius: 10px;
-}
-.text{
-    margin-top: 30px;
-    text-align: center;
     justify-content: center;
-    align-items: flex-end;
+    text-align: center;
+    padding: 0 16px;
 }
-span{
-    display: flex;
-    width: 250px;line-height: 120%;
-    height: 70px;
-    position: relative;
+.text h1{
+    text-align: center;
+    line-height: 120%;
     font-weight: 700;
-    font-family: var(--main-font);
     font-size: var(--main-size);
-    color: var(--third-color);
+    margin-top:10px;
+    width:250px ;
 }
-.scan{
-    font-size: var(--secondary-size);
-    font-weight: normal;
-    color: var(--secondary-color); line-height: 140%;
-}
-.attribution{
-    display: flex;margin-top:50px;
-}
-@media screen and (max-width: 375px) {
-    .flex-container{
-        height: 500px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 320px;
-    }
-    img{
-        width:290px;
-        height: 280px;
-    }
-
+.text p{
+    width:270px ;
+    text-align: center;
+    color: var(--secondary-color);
+    line-height: 140%;
 
 }
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.attribution a {
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+
+.attribution a:hover {
+    text-decoration: underline;
+}
+
+
